--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
   "module": "dist/mapbox-vector-tile.esm.js",
   "description": "Parses mapbox vector tiles",
   "devDependencies": {
-    "husky": "^4.2.5",
-    "tsdx": "^0.13.3",
-    "tslib": "^2.0.1",
-    "typescript": "^4.0.2",
-    "eslint": "^7.7.0"
+    "husky": "^4.3.0",
+    "tsdx": "^0.14.1",
+    "tslib": "^2.0.3",
+    "typescript": "^4.0.3",
+    "eslint": "^7.11.0"
   },
   "dependencies": {
-    "protobufjs": "^6.10.1"
+    "@protobuf-ts/runtime": "^1.0.5"
   }
 }
